*IMPROVEMENT: Added XX:+UseConcMarkSweepGC to MSGFTask to limit GCOverhead errors. *IMPROVEMENT: Removed SpectrumTitle2Id mapping to reduce the overall memory footprint.